2008-01-10  Erik De richter <frederik.de.richter@pandora.be>
	* src/GrampsCfg.py: 
    * src/plugins/Reorderids.py: add note reordering 

2008-01-10 Peter Landgren <peter.talken@telia.com>
    * src/RecentFiles.py: fix in rename_filename

2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ObjectSelector/_ObjectSelectorWindow.py: fix indentation error
    introduced through a previous patch

2008-01-09  Brian Matherly <brian@gramps-project.org>
	* src/docgen/CairoDoc.py: Fix 0001541: Box size too small - Descendant Chart

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/ManagedWindow.py: Close window only if it is already open. Possible
	fix for bug #1510

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
            Peter Landgren <peter.talken@telia.com>
	* src/DbManager.py: rename check, issue 1562, 1569

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_NoteModel.py:
	* src/Selectors/_SelectNote.py:
	* src/DisplayViews/NoteView.py:
	* src/gen/db/base.py:
	Change the order of columns on Note View and Select Note dialog. Also
	fixed a crash. Bug #1529

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_BaseModel.py: add self.db to match function

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/__init__.py: remove message regarding malformed dataviews

2008-01-09 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/utils/callback.py
    * src/ObjectSelector/_FamilyFilterFrame.py
    * src/test/test/test_util_test.py
    * src/test/test/gedread_util_test.py
    * src/test/test_util.py
    * src/test/gramps_cli_test.py
    * src/test/ansel_utf8_test.py
    * src/GrampsDbUtils/test/_GedcomChar_test.py
    * src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py
    * src/GrampsDbUtils/test/GR_test.py
    From PEP8 Always use 'self' for the first argument to instance methods.

2008-01-09 Raphael Ackermann <raphael.ackermann@gmail.com>